PythonPlag/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> bloque_codigo
Rule 1     bloque_codigo -> empty
Rule 2     bloque_codigo -> linea_codigo empty
Rule 3     bloque_codigo -> bloque_codigo linea_codigo empty
Rule 4     linea_codigo -> expr_funcion
Rule 5     linea_codigo -> expr_def_funcion
Rule 6     linea_codigo -> expr_asign
Rule 7     linea_codigo -> expr_if_else
Rule 8     linea_codigo -> def_for
Rule 9     linea_codigo -> expr_return
Rule 10    linea_codigo -> call_method
Rule 11    expr_def_funcion -> DEF expr_funcion DPUNTOS
Rule 12    params -> variable
Rule 13    params -> params COMA params
Rule 14    params -> expr_funcion
Rule 15    params -> expr_asign
Rule 16    params -> operaciones_algebraica
Rule 17    variable -> ID
Rule 18    variable -> expr_str
Rule 19    variable -> NUMBER
Rule 20    variable -> expr_float
Rule 21    variable -> bool
Rule 22    variable -> lista
Rule 23    expr_funcion -> ID LPAREN params RPAREN
Rule 24    expr_funcion -> ID LPAREN RPAREN
Rule 25    expr_funcion -> LEN LPAREN params RPAREN
Rule 26    lista -> ID LCORC variable RCORC
Rule 27    lista -> ID LCORC operaciones_algebraica RCORC
Rule 28    lista -> LCORC params COMA params RCORC
Rule 29    expr_str -> STRING
Rule 30    expr_float -> NUMBER PUNTO NUMBER
Rule 31    expr_asign -> ID EQUALS variable
Rule 32    expr_asign -> ID EQUALS expr_funcion
Rule 33    expr_asign -> ID EQUALS operaciones_algebraica
Rule 34    expr_asign -> ID EQUALS LCORC RCORC
Rule 35    expr_asign -> ID EQUALS call_method
Rule 36    operador_igualdad -> MAYOR
Rule 37    operador_igualdad -> MENOR
Rule 38    operador_igualdad -> DEQUALS
Rule 39    operador_igualdad -> MAYOR EQUALS
Rule 40    operador_igualdad -> MENOR EQUALS
Rule 41    operador_igualdad -> NEGADOR EQUALS
Rule 42    expr_return -> RETURN variable
Rule 43    expr_return -> RETURN expr_funcion
Rule 44    expr_return -> RETURN operaciones_algebraica
Rule 45    expr_if_else -> IF condiciones_expr_if_else DPUNTOS
Rule 46    expr_if_else -> ELIF condiciones_expr_if_else DPUNTOS
Rule 47    expr_if_else -> ELSE DPUNTOS
Rule 48    condiciones_expr_if_else -> condiciones
Rule 49    condiciones_expr_if_else -> condiciones and_or condiciones_expr_if_else
Rule 50    condiciones_expr_if_else -> LPAREN condiciones_expr_if_else RPAREN
Rule 51    condiciones -> variable
Rule 52    condiciones -> expr_funcion
Rule 53    condiciones -> operaciones_algebraica operador_igualdad variable
Rule 54    condiciones -> condiciones operador_igualdad condiciones
Rule 55    def_for -> FOR variable IN RANGE LPAREN params_for RPAREN DPUNTOS
Rule 56    params_for -> variable_for
Rule 57    params_for -> variable_for COMA variable_for
Rule 58    params_for -> variable_for COMA variable_for COMA variable_for
Rule 59    variable_for -> variable
Rule 60    variable_for -> operaciones_algebraica
Rule 61    bool -> TRUE
Rule 62    bool -> FALSE
Rule 63    and_or -> AND
Rule 64    and_or -> OR
Rule 65    operaciones_algebraica -> variables_operaciones_algebraica operador_alge variables_operaciones_algebraica
Rule 66    operaciones_algebraica -> LPAREN variables_operaciones_algebraica operador_alge variables_operaciones_algebraica RPAREN
Rule 67    operaciones_algebraica -> operaciones_algebraica operador_alge variables_operaciones_algebraica
Rule 68    variables_operaciones_algebraica -> variable
Rule 69    variables_operaciones_algebraica -> expr_funcion
Rule 70    operador_alge -> PLUS
Rule 71    operador_alge -> MINUS
Rule 72    operador_alge -> TIMES
Rule 73    operador_alge -> DIVIDE
Rule 74    operador_alge -> MOD
Rule 75    operador_alge -> EXP
Rule 76    funcion_lista -> APPEND
Rule 77    funcion_lista -> INDEX
Rule 78    funcion_lista -> POP
Rule 79    call_method -> variable PUNTO expr_funcion
Rule 80    call_method -> call_method PUNTO expr_funcion
Rule 81    call_method -> variable PUNTO funcion_lista LPAREN params RPAREN
Rule 82    empty -> <empty>

Terminals, with rules where they appear

AND                  : 63
APPEND               : 76
COMA                 : 13 28 57 58 58
COMMENT              : 
DEF                  : 11
DEQUALS              : 38
DIVIDE               : 73
DPUNTOS              : 11 45 46 47 55
ELIF                 : 46
ELSE                 : 47
EQUALS               : 31 32 33 34 35 39 40 41
EXP                  : 75
FALSE                : 62
FOR                  : 55
ID                   : 17 23 24 26 27 31 32 33 34 35
IF                   : 45
IN                   : 55
INDEX                : 77
LCORC                : 26 27 28 34
LEN                  : 25
LPAREN               : 23 24 25 50 55 66 81
MAYOR                : 36 39
MENOR                : 37 40
MINUS                : 71
MOD                  : 74
NEGADOR              : 41
NUMBER               : 19 30 30
OR                   : 64
PLUS                 : 70
POP                  : 78
PUNTO                : 30 79 80 81
RANGE                : 55
RCORC                : 26 27 28 34
RETURN               : 42 43 44
RPAREN               : 23 24 25 50 55 66 81
STRING               : 29
TIMES                : 72
TRUE                 : 61
error                : 

Nonterminals, with rules where they appear

and_or               : 49
bloque_codigo        : 3 0
bool                 : 21
call_method          : 10 35 80
condiciones          : 48 49 54 54
condiciones_expr_if_else : 45 46 49 50
def_for              : 8
empty                : 1 2 3
expr_asign           : 6 15
expr_def_funcion     : 5
expr_float           : 20
expr_funcion         : 4 11 14 32 43 52 69 79 80
expr_if_else         : 7
expr_return          : 9
expr_str             : 18
funcion_lista        : 81
linea_codigo         : 2 3
lista                : 22
operaciones_algebraica : 16 27 33 44 53 60 67
operador_alge        : 65 66 67
operador_igualdad    : 53 54
params               : 13 13 23 25 28 28 81
params_for           : 55
variable             : 12 26 31 42 51 53 55 59 68 79 81
variable_for         : 56 57 57 58 58 58
variables_operaciones_algebraica : 65 65 66 66 67

Parsing method: LALR

state 0

    (0) S' -> . bloque_codigo
    (1) bloque_codigo -> . empty
    (2) bloque_codigo -> . linea_codigo empty
    (3) bloque_codigo -> . bloque_codigo linea_codigo empty
    (82) empty -> .
    (4) linea_codigo -> . expr_funcion
    (5) linea_codigo -> . expr_def_funcion
    (6) linea_codigo -> . expr_asign
    (7) linea_codigo -> . expr_if_else
    (8) linea_codigo -> . def_for
    (9) linea_codigo -> . expr_return
    (10) linea_codigo -> . call_method
    (23) expr_funcion -> . ID LPAREN params RPAREN
    (24) expr_funcion -> . ID LPAREN RPAREN
    (25) expr_funcion -> . LEN LPAREN params RPAREN
    (11) expr_def_funcion -> . DEF expr_funcion DPUNTOS
    (31) expr_asign -> . ID EQUALS variable
    (32) expr_asign -> . ID EQUALS expr_funcion
    (33) expr_asign -> . ID EQUALS operaciones_algebraica
    (34) expr_asign -> . ID EQUALS LCORC RCORC
    (35) expr_asign -> . ID EQUALS call_method
    (45) expr_if_else -> . IF condiciones_expr_if_else DPUNTOS
    (46) expr_if_else -> . ELIF condiciones_expr_if_else DPUNTOS
    (47) expr_if_else -> . ELSE DPUNTOS
    (55) def_for -> . FOR variable IN RANGE LPAREN params_for RPAREN DPUNTOS
    (42) expr_return -> . RETURN variable
    (43) expr_return -> . RETURN expr_funcion
    (44) expr_return -> . RETURN operaciones_algebraica
    (79) call_method -> . variable PUNTO expr_funcion
    (80) call_method -> . call_method PUNTO expr_funcion
    (81) call_method -> . variable PUNTO funcion_lista LPAREN params RPAREN
    (17) variable -> . ID
    (18) variable -> . expr_str
    (19) variable -> . NUMBER
    (20) variable -> . expr_float
    (21) variable -> . bool
    (22) variable -> . lista
    (29) expr_str -> . STRING
    (30) expr_float -> . NUMBER PUNTO NUMBER
    (61) bool -> . TRUE
    (62) bool -> . FALSE
    (26) lista -> . ID LCORC variable RCORC
    (27) lista -> . ID LCORC operaciones_algebraica RCORC
    (28) lista -> . LCORC params COMA params RCORC

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for LEN resolved as shift
  ! shift/reduce conflict for DEF resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for ELIF resolved as shift
  ! shift/reduce conflict for ELSE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for LCORC resolved as shift
    $end            reduce using rule 82 (empty -> .)
    ID              shift and go to state 11
    LEN             shift and go to state 12
    DEF             shift and go to state 13
    IF              shift and go to state 16
    ELIF            shift and go to state 17
    ELSE            shift and go to state 18
    FOR             shift and go to state 19
    RETURN          shift and go to state 20
    NUMBER          shift and go to state 22
    STRING          shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    LCORC           shift and go to state 15

  ! ID              [ reduce using rule 82 (empty -> .) ]
  ! LEN             [ reduce using rule 82 (empty -> .) ]
  ! DEF             [ reduce using rule 82 (empty -> .) ]
  ! IF              [ reduce using rule 82 (empty -> .) ]
  ! ELIF            [ reduce using rule 82 (empty -> .) ]
  ! ELSE            [ reduce using rule 82 (empty -> .) ]
  ! FOR             [ reduce using rule 82 (empty -> .) ]
  ! RETURN          [ reduce using rule 82 (empty -> .) ]
  ! NUMBER          [ reduce using rule 82 (empty -> .) ]
  ! STRING          [ reduce using rule 82 (empty -> .) ]
  ! TRUE            [ reduce using rule 82 (empty -> .) ]
  ! FALSE           [ reduce using rule 82 (empty -> .) ]
  ! LCORC           [ reduce using rule 82 (empty -> .) ]

    bloque_codigo                  shift and go to state 1
    empty                          shift and go to state 2
    linea_codigo                   shift and go to state 3
    expr_funcion                   shift and go to state 4
    expr_def_funcion               shift and go to state 5
    expr_asign                     shift and go to state 6
    expr_if_else                   shift and go to state 7
    def_for                        shift and go to state 8
    expr_return                    shift and go to state 9
    call_method                    shift and go to state 10
    variable                       shift and go to state 14
    expr_str                       shift and go to state 21
    expr_float                     shift and go to state 23
    bool                           shift and go to state 24
    lista                          shift and go to state 25

state 1

    (0) S' -> bloque_codigo .
    (3) bloque_codigo -> bloque_codigo . linea_codigo empty
    (4) linea_codigo -> . expr_funcion
    (5) linea_codigo -> . expr_def_funcion
    (6) linea_codigo -> . expr_asign
    (7) linea_codigo -> . expr_if_else
    (8) linea_codigo -> . def_for
    (9) linea_codigo -> . expr_return
    (10) linea_codigo -> . call_method
    (23) expr_funcion -> . ID LPAREN params RPAREN
    (24) expr_funcion -> . ID LPAREN RPAREN
    (25) expr_funcion -> . LEN LPAREN params RPAREN
    (11) expr_def_funcion -> . DEF expr_funcion DPUNTOS
    (31) expr_asign -> . ID EQUALS variable
    (32) expr_asign -> . ID EQUALS expr_funcion
    (33) expr_asign -> . ID EQUALS operaciones_algebraica
    (34) expr_asign -> . ID EQUALS LCORC RCORC
    (35) expr_asign -> . ID EQUALS call_method
    (45) expr_if_else -> . IF condiciones_expr_if_else DPUNTOS
    (46) expr_if_else -> . ELIF condiciones_expr_if_else DPUNTOS
    (47) expr_if_else -> . ELSE DPUNTOS
    (55) def_for -> . FOR variable IN RANGE LPAREN params_for RPAREN DPUNTOS
    (42) expr_return -> . RETURN variable
    (43) expr_return -> . RETURN expr_funcion
    (44) expr_return -> . RETURN operaciones_algebraica
    (79) call_method -> . variable PUNTO expr_funcion
    (80) call_method -> . call_method PUNTO expr_funcion
    (81) call_method -> . variable PUNTO funcion_lista LPAREN params RPAREN
    (17) variable -> . ID
    (18) variable -> . expr_str
    (19) variable -> . NUMBER
    (20) variable -> . expr_float
    (21) variable -> . bool
    (22) variable -> . lista
    (29) expr_str -> . STRING
    (30) expr_float -> . NUMBER PUNTO NUMBER
    (61) bool -> . TRUE
    (62) bool -> . FALSE
    (26) lista -> . ID LCORC variable RCORC
    (27) lista -> . ID LCORC operaciones_algebraica RCORC
    (28) lista -> . LCORC params COMA params RCORC

    ID              shift and go to state 11
    LEN             shift and go to state 12
    DEF             shift and go to state 13
    IF              shift and go to state 16
    ELIF            shift and go to state 17
    ELSE            shift and go to state 18
    FOR             shift and go to state 19
    RETURN          shift and go to state 20
    NUMBER          shift and go to state 22
    STRING          shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    LCORC           shift and go to state 15

    linea_codigo                   shift and go to state 29
    expr_funcion                   shift and go to state 4
    expr_def_funcion               shift and go to state 5
    expr_asign                     shift and go to state 6
    expr_if_else                   shift and go to state 7
    def_for                        shift and go to state 8
    expr_return                    shift and go to state 9
    call_method                    shift and go to state 10
    variable                       shift and go to state 14
    expr_str                       shift and go to state 21
    expr_float                     shift and go to state 23
    bool                           shift and go to state 24
    lista                          shift and go to state 25

state 2

    (1) bloque_codigo -> empty .

    ID              reduce using rule 1 (bloque_codigo -> empty .)
    LEN             reduce using rule 1 (bloque_codigo -> empty .)
    DEF             reduce using rule 1 (bloque_codigo -> empty .)
    IF              reduce using rule 1 (bloque_codigo -> empty .)
    ELIF            reduce using rule 1 (bloque_codigo -> empty .)
    ELSE            reduce using rule 1 (bloque_codigo -> empty .)
    FOR             reduce using rule 1 (bloque_codigo -> empty .)
    RETURN          reduce using rule 1 (bloque_codigo -> empty .)
    NUMBER          reduce using rule 1 (bloque_codigo -> empty .)
    STRING          reduce using rule 1 (bloque_codigo -> empty .)
    TRUE            reduce using rule 1 (bloque_codigo -> empty .)
    FALSE           reduce using rule 1 (bloque_codigo -> empty .)
    LCORC           reduce using rule 1 (bloque_codigo -> empty .)
    $end            reduce using rule 1 (bloque_codigo -> empty .)


state 3

    (2) bloque_codigo -> linea_codigo . empty
    (82) empty -> .

    ID              reduce using rule 82 (empty -> .)
    LEN             reduce using rule 82 (empty -> .)
    DEF             reduce using rule 82 (empty -> .)
    IF              reduce using rule 82 (empty -> .)
    ELIF            reduce using rule 82 (empty -> .)
    ELSE            reduce using rule 82 (empty -> .)
    FOR             reduce using rule 82 (empty -> .)
    RETURN          reduce using rule 82 (empty -> .)
    NUMBER          reduce using rule 82 (empty -> .)
    STRING          reduce using rule 82 (empty -> .)
    TRUE            reduce using rule 82 (empty -> .)
    FALSE           reduce using rule 82 (empty -> .)
    LCORC           reduce using rule 82 (empty -> .)
    $end            reduce using rule 82 (empty -> .)

    empty                          shift and go to state 30

state 4

    (4) linea_codigo -> expr_funcion .

    ID              reduce using rule 4 (linea_codigo -> expr_funcion .)
    LEN             reduce using rule 4 (linea_codigo -> expr_funcion .)
    DEF             reduce using rule 4 (linea_codigo -> expr_funcion .)
    IF              reduce using rule 4 (linea_codigo -> expr_funcion .)
    ELIF            reduce using rule 4 (linea_codigo -> expr_funcion .)
    ELSE            reduce using rule 4 (linea_codigo -> expr_funcion .)
    FOR             reduce using rule 4 (linea_codigo -> expr_funcion .)
    RETURN          reduce using rule 4 (linea_codigo -> expr_funcion .)
    NUMBER          reduce using rule 4 (linea_codigo -> expr_funcion .)
    STRING          reduce using rule 4 (linea_codigo -> expr_funcion .)
    TRUE            reduce using rule 4 (linea_codigo -> expr_funcion .)
    FALSE           reduce using rule 4 (linea_codigo -> expr_funcion .)
    LCORC           reduce using rule 4 (linea_codigo -> expr_funcion .)
    $end            reduce using rule 4 (linea_codigo -> expr_funcion .)


state 5

    (5) linea_codigo -> expr_def_funcion .

    ID              reduce using rule 5 (linea_codigo -> expr_def_funcion .)
    LEN             reduce using rule 5 (linea_codigo -> expr_def_funcion .)
    DEF             reduce using rule 5 (linea_codigo -> expr_def_funcion .)
    IF              reduce using rule 5 (linea_codigo -> expr_def_funcion .)
    ELIF            reduce using rule 5 (linea_codigo -> expr_def_funcion .)
    ELSE            reduce using rule 5 (linea_codigo -> expr_def_funcion .)
    FOR             reduce using rule 5 (linea_codigo -> expr_def_funcion .)
    RETURN          reduce using rule 5 (linea_codigo -> expr_def_funcion .)
    NUMBER          reduce using rule 5 (linea_codigo -> expr_def_funcion .)
    STRING          reduce using rule 5 (linea_codigo -> expr_def_funcion .)
    TRUE            reduce using rule 5 (linea_codigo -> expr_def_funcion .)
    FALSE           reduce using rule 5 (linea_codigo -> expr_def_funcion .)
    LCORC           reduce using rule 5 (linea_codigo -> expr_def_funcion .)
    $end            reduce using rule 5 (linea_codigo -> expr_def_funcion .)


state 6

    (6) linea_codigo -> expr_asign .

    ID              reduce using rule 6 (linea_codigo -> expr_asign .)
    LEN             reduce using rule 6 (linea_codigo -> expr_asign .)
    DEF             reduce using rule 6 (linea_codigo -> expr_asign .)
    IF              reduce using rule 6 (linea_codigo -> expr_asign .)
    ELIF            reduce using rule 6 (linea_codigo -> expr_asign .)
    ELSE            reduce using rule 6 (linea_codigo -> expr_asign .)
    FOR             reduce using rule 6 (linea_codigo -> expr_asign .)
    RETURN          reduce using rule 6 (linea_codigo -> expr_asign .)
    NUMBER          reduce using rule 6 (linea_codigo -> expr_asign .)
    STRING          reduce using rule 6 (linea_codigo -> expr_asign .)
    TRUE            reduce using rule 6 (linea_codigo -> expr_asign .)
    FALSE           reduce using rule 6 (linea_codigo -> expr_asign .)
    LCORC           reduce using rule 6 (linea_codigo -> expr_asign .)
    $end            reduce using rule 6 (linea_codigo -> expr_asign .)


state 7

    (7) linea_codigo -> expr_if_else .

    ID              reduce using rule 7 (linea_codigo -> expr_if_else .)
    LEN             reduce using rule 7 (linea_codigo -> expr_if_else .)
    DEF             reduce using rule 7 (linea_codigo -> expr_if_else .)
    IF              reduce using rule 7 (linea_codigo -> expr_if_else .)
    ELIF            reduce using rule 7 (linea_codigo -> expr_if_else .)
    ELSE            reduce using rule 7 (linea_codigo -> expr_if_else .)
    FOR             reduce using rule 7 (linea_codigo -> expr_if_else .)
    RETURN          reduce using rule 7 (linea_codigo -> expr_if_else .)
    NUMBER          reduce using rule 7 (linea_codigo -> expr_if_else .)
    STRING          reduce using rule 7 (linea_codigo -> expr_if_else .)
    TRUE            reduce using rule 7 (linea_codigo -> expr_if_else .)
    FALSE           reduce using rule 7 (linea_codigo -> expr_if_else .)
    LCORC           reduce using rule 7 (linea_codigo -> expr_if_else .)
    $end            reduce using rule 7 (linea_codigo -> expr_if_else .)


state 8

    (8) linea_codigo -> def_for .

    ID              reduce using rule 8 (linea_codigo -> def_for .)
    LEN             reduce using rule 8 (linea_codigo -> def_for .)
    DEF             reduce using rule 8 (linea_codigo -> def_for .)
    IF              reduce using rule 8 (linea_codigo -> def_for .)
    ELIF            reduce using rule 8 (linea_codigo -> def_for .)
    ELSE            reduce using rule 8 (linea_codigo -> def_for .)
    FOR             reduce using rule 8 (linea_codigo -> def_for .)
    RETURN          reduce using rule 8 (linea_codigo -> def_for .)
    NUMBER          reduce using rule 8 (linea_codigo -> def_for .)
    STRING          reduce using rule 8 (linea_codigo -> def_for .)
    TRUE            reduce using rule 8 (linea_codigo -> def_for .)
    FALSE           reduce using rule 8 (linea_codigo -> def_for .)
    LCORC           reduce using rule 8 (linea_codigo -> def_for .)
    $end            reduce using rule 8 (linea_codigo -> def_for .)


state 9

    (9) linea_codigo -> expr_return .

    ID              reduce using rule 9 (linea_codigo -> expr_return .)
    LEN             reduce using rule 9 (linea_codigo -> expr_return .)
    DEF             reduce using rule 9 (linea_codigo -> expr_return .)
    IF              reduce using rule 9 (linea_codigo -> expr_return .)
    ELIF            reduce using rule 9 (linea_codigo -> expr_return .)
    ELSE            reduce using rule 9 (linea_codigo -> expr_return .)
    FOR             reduce using rule 9 (linea_codigo -> expr_return .)
    RETURN          reduce using rule 9 (linea_codigo -> expr_return .)
    NUMBER          reduce using rule 9 (linea_codigo -> expr_return .)
    STRING          reduce using rule 9 (linea_codigo -> expr_return .)
    TRUE            reduce using rule 9 (linea_codigo -> expr_return .)
    FALSE           reduce using rule 9 (linea_codigo -> expr_return .)
    LCORC           reduce using rule 9 (linea_codigo -> expr_return .)
    $end            reduce using rule 9 (linea_codigo -> expr_return .)


state 10

    (10) linea_codigo -> call_method .
    (80) call_method -> call_method . PUNTO expr_funcion

    ID              reduce using rule 10 (linea_codigo -> call_method .)
    LEN             reduce using rule 10 (linea_codigo -> call_method .)
    DEF             reduce using rule 10 (linea_codigo -> call_method .)
    IF              reduce using rule 10 (linea_codigo -> call_method .)
    ELIF            reduce using rule 10 (linea_codigo -> call_method .)
    ELSE            reduce using rule 10 (linea_codigo -> call_method .)
    FOR             reduce using rule 10 (linea_codigo -> call_method .)
    RETURN          reduce using rule 10 (linea_codigo -> call_method .)
    NUMBER          reduce using rule 10 (linea_codigo -> call_method .)
    STRING          reduce using rule 10 (linea_codigo -> call_method .)
    TRUE            reduce using rule 10 (linea_codigo -> call_method .)
    FALSE           reduce using rule 10 (linea_codigo -> call_method .)
    LCORC           reduce using rule 10 (linea_codigo -> call_method .)
    $end            reduce using rule 10 (linea_codigo -> call_method .)
    PUNTO           shift and go to state 31


state 11

    (23) expr_funcion -> ID . LPAREN params RPAREN
    (24) expr_funcion -> ID . LPAREN RPAREN
    (31) expr_asign -> ID . EQUALS variable
    (32) expr_asign -> ID . EQUALS expr_funcion
    (33) expr_asign -> ID . EQUALS operaciones_algebraica
    (34) expr_asign -> ID . EQUALS LCORC RCORC
    (35) expr_asign -> ID . EQUALS call_method
    (17) variable -> ID .
    (26) lista -> ID . LCORC variable RCORC
    (27) lista -> ID . LCORC operaciones_algebraica RCORC

    LPAREN          shift and go to state 32
    EQUALS          shift and go to state 33
    PUNTO           reduce using rule 17 (variable -> ID .)
    LCORC           shift and go to state 34


state 12

    (25) expr_funcion -> LEN . LPAREN params RPAREN

    LPAREN          shift and go to state 35


state 13

    (11) expr_def_funcion -> DEF . expr_funcion DPUNTOS
    (23) expr_funcion -> . ID LPAREN params RPAREN
    (24) expr_funcion -> . ID LPAREN RPAREN
    (25) expr_funcion -> . LEN LPAREN params RPAREN

    ID              shift and go to state 37
    LEN             shift and go to state 12

    expr_funcion                   shift and go to state 36

state 14

    (79) call_method -> variable . PUNTO expr_funcion
    (81) call_method -> variable . PUNTO funcion_lista LPAREN params RPAREN

    PUNTO           shift and go to state 38


state 15

    (28) lista -> LCORC . params COMA params RCORC
    (12) params -> . variable
    (13) params -> . params COMA params
    (14) params -> . expr_funcion
    (15) params -> . expr_asign
    (16) params -> . operaciones_algebraica
    (17) variable -> . ID
    (18) variable -> . expr_str
    (19) variable -> . NUMBER
    (20) variable -> . expr_float
    (21) variable -> . bool
    (22) variable -> . lista
    (23) expr_funcion -> . ID LPAREN params RPAREN
    (24) expr_funcion -> . ID LPAREN RPAREN
    (25) expr_funcion -> . LEN LPAREN params RPAREN
    (31) expr_asign -> . ID EQUALS variable
    (32) expr_asign -> . ID EQUALS expr_funcion
    (33) expr_asign -> . ID EQUALS operaciones_algebraica
    (34) expr_asign -> . ID EQUALS LCORC RCORC
    (35) expr_asign -> . ID EQUALS call_method
    (65) operaciones_algebraica -> . variables_operaciones_algebraica operador_alge variables_operaciones_algebraica
    (66) operaciones_algebraica -> . LPAREN variables_operaciones_algebraica operador_alge variables_operaciones_algebraica RPAREN
    (67) operaciones_algebraica -> . operaciones_algebraica operador_alge variables_operaciones_algebraica
    (29) expr_str -> . STRING
    (30) expr_float -> . NUMBER PUNTO NUMBER
    (61) bool -> . TRUE
    (62) bool -> . FALSE
    (26) lista -> . ID LCORC variable RCORC
    (27) lista -> . ID LCORC operaciones_algebraica RCORC
    (28) lista -> . LCORC params COMA params RCORC
    (68) variables_operaciones_algebraica -> . variable
    (69) variables_operaciones_algebraica -> . expr_funcion

    ID              shift and go to state 44
    NUMBER          shift and go to state 22
    LEN             shift and go to state 12
    LPAREN          shift and go to state 45
    STRING          shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    LCORC           shift and go to state 15

    params                         shift and go to state 39
    variable                       shift and go to state 40
    expr_funcion                   shift and go to state 41
    expr_asign                     shift and go to state 42
    operaciones_algebraica         shift and go to state 43
    expr_str                       shift and go to state 21
    expr_float                     shift and go to state 23
    bool                           shift and go to state 24
    lista                          shift and go to state 25
    variables_operaciones_algebraica shift and go to state 46

state 16

    (45) expr_if_else -> IF . condiciones_expr_if_else DPUNTOS
    (48) condiciones_expr_if_else -> . condiciones
    (49) condiciones_expr_if_else -> . condiciones and_or condiciones_expr_if_else
    (50) condiciones_expr_if_else -> . LPAREN condiciones_expr_if_else RPAREN
    (51) condiciones -> . variable
    (52) condiciones -> . expr_funcion
    (53) condiciones -> . operaciones_algebraica operador_igualdad variable
    (54) condiciones -> . condiciones operador_igualdad condiciones
    (17) variable -> . ID
    (18) variable -> . expr_str
    (19) variable -> . NUMBER
    (20) variable -> . expr_float
    (21) variable -> . bool
    (22) variable -> . lista
    (23) expr_funcion -> . ID LPAREN params RPAREN
    (24) expr_funcion -> . ID LPAREN RPAREN
    (25) expr_funcion -> . LEN LPAREN params RPAREN
    (65) operaciones_algebraica -> . variables_operaciones_algebraica operador_alge variables_operaciones_algebraica
    (66) operaciones_algebraica -> . LPAREN variables_operaciones_algebraica operador_alge variables_operaciones_algebraica RPAREN
    (67) operaciones_algebraica -> . operaciones_algebraica operador_alge variables_operaciones_algebraica
    (29) expr_str -> . STRING
    (30) expr_float -> . NUMBER PUNTO NUMBER
    (61) bool -> . TRUE
    (62) bool -> . FALSE
    (26) lista -> . ID LCORC variable RCORC
    (27) lista -> . ID LCORC operaciones_algebraica RCORC
    (28) lista -> . LCORC params COMA params RCORC
    (68) variables_operaciones_algebraica -> . variable
    (69) variables_operaciones_algebraica -> . expr_funcion

    LPAREN          shift and go to state 49
    ID              shift and go to state 53
    NUMBER          shift and go to state 22
    LEN             shift and go to state 12
    STRING          shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    LCORC           shift and go to state 15

    condiciones_expr_if_else       shift and go to state 47
    condiciones                    shift and go to state 48
    variable                       shift and go to state 50
    expr_funcion                   shift and go to state 51
    operaciones_algebraica         shift and go to state 52
    expr_str                       shift and go to state 21
    expr_float                     shift and go to state 23
    bool                           shift and go to state 24
    lista                          shift and go to state 25
    variables_operaciones_algebraica shift and go to state 46

state 17

    (46) expr_if_else -> ELIF . condiciones_expr_if_else DPUNTOS
    (48) condiciones_expr_if_else -> . condiciones
    (49) condiciones_expr_if_else -> . condiciones and_or condiciones_expr_if_else
    (50) condiciones_expr_if_else -> . LPAREN condiciones_expr_if_else RPAREN
    (51) condiciones -> . variable
    (52) condiciones -> . expr_funcion
    (53) condiciones -> . operaciones_algebraica operador_igualdad variable
    (54) condiciones -> . condiciones operador_igualdad condiciones
    (17) variable -> . ID
    (18) variable -> . expr_str
    (19) variable -> . NUMBER
    (20) variable -> . expr_float
    (21) variable -> . bool
    (22) variable -> . lista
    (23) expr_funcion -> . ID LPAREN params RPAREN
    (24) expr_funcion -> . ID LPAREN RPAREN
    (25) expr_funcion -> . LEN LPAREN params RPAREN
    (65) operaciones_algebraica -> . variables_operaciones_algebraica operador_alge variables_operaciones_algebraica
    (66) operaciones_algebraica -> . LPAREN variables_operaciones_algebraica operador_alge variables_operaciones_algebraica RPAREN
    (67) operaciones_algebraica -> . operaciones_algebraica operador_alge variables_operaciones_algebraica
    (29) expr_str -> . STRING
    (30) expr_float -> . NUMBER PUNTO NUMBER
    (61) bool -> . TRUE
    (62) bool -> . FALSE
    (26) lista -> . ID LCORC variable RCORC
    (27) lista -> . ID LCORC operaciones_algebraica RCORC
    (28) lista -> . LCORC params COMA params RCORC
    (68) variables_operaciones_algebraica -> . variable
    (69) variables_operaciones_algebraica -> . expr_funcion

    LPAREN          shift and go to state 49
    ID              shift and go to state 53
    NUMBER          shift and go to state 22
    LEN             shift and go to state 12
    STRING          shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    LCORC           shift and go to state 15

    condiciones_expr_if_else       shift and go to state 54
    condiciones                    shift and go to state 48
    variable                       shift and go to state 50
    expr_funcion                   shift and go to state 51
    operaciones_algebraica         shift and go to state 52
    expr_str                       shift and go to state 21
    expr_float                     shift and go to state 23
    bool                           shift and go to state 24
    lista                          shift and go to state 25
    variables_operaciones_algebraica shift and go to state 46

state 18

    (47) expr_if_else -> ELSE . DPUNTOS

    DPUNTOS         shift and go to state 55


state 19

    (55) def_for -> FOR . variable IN RANGE LPAREN params_for RPAREN DPUNTOS
    (17) variable -> . ID
    (18) variable -> . expr_str
    (19) variable -> . NUMBER
    (20) variable -> . expr_float
    (21) variable -> . bool
    (22) variable -> . lista
    (29) expr_str -> . STRING
    (30) expr_float -> . NUMBER PUNTO NUMBER
    (61) bool -> . TRUE
    (62) bool -> . FALSE
    (26) lista -> . ID LCORC variable RCORC
    (27) lista -> . ID LCORC operaciones_algebraica RCORC
    (28) lista -> . LCORC params COMA params RCORC

    ID              shift and go to state 57
    NUMBER          shift and go to state 22
    STRING          shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    LCORC           shift and go to state 15

    variable                       shift and go to state 56
    expr_str                       shift and go to state 21
    expr_float                     shift and go to state 23
    bool                           shift and go to state 24
    lista                          shift and go to state 25

state 20
